tests/ui/mismatched_types.stderr
error[E0308]: mismatched types
 --> $DIR/mismatched_types.rs:9:19
  |
9 | static BENCH_WTF: usize = 999;
  |                   ^^^^^ expected fn pointer, found `usize`
  |
  = note: expected fn pointer `for<'r> fn(&'r mut Bencher)`
                   found type `usize`
